<resources>
    <string name="app_name">K22411CSampleProject</string>
    <string name="title_login_user_name">User name:</string>
    <string name="title_login_user_name_hint">Enter your user name</string>
    <string name="title_login_password">Password:</string>
    <string name="title_login_save_login_infor">Save login infor</string>
    <string name="title_login_button_login">Login</string>
    <string name="confirm_exit_title">Exit confirmation</string>
    <string name="confirm_exit_message">Are you sure you want to exit?</string>
    <string name="confirm_exit_yes">YES</string>
    <string name="confirm_exit_no">NO</string>
    <string name="title_employee">Employee</string>
    <string name="title_customer">Customer</string>
    <string name="title_healthcare">Health Care</string>
    <string name="title_salary">Salary</string>
    <string name="title_employee_healthcare">Employee Healthcare</string>
    <string name="title_height">Height:</string>
    <string name="title_weight">Weight:</string>
    <string name="title_calculate">Calculate</string>
    <string name="title_clear">Clear</string>
    <string name="title_close">Close</string>
    <string name="title_slim">Slim</string>
    <string name="title_normal">Normal</string>
    <string name="title_fat">FAT</string>
    <string name="title_product">Product</string>
    <string name="title_advanced_product">Advanced Product</string>
    <string name="title_new_customer">New Customer</string>
    <string name="title_broadcast_advertising">Broadcast Advertising</string>
    <string name="title_help">Help</string>
    <string name="title_customer_detail">Customer Details</string>
    <string name="title_customer_id">Customer ID:</string>
    <string name="title_customer_name">Customer Name:</string>
    <string name="title_customer_email">Customer Email:</string>
    <string name="title_customer_phone">Customer Phone:</string>
    <string name="title_new">New</string>
    <string name="title_save">Save</string>
    <string name="title_remove">Remove</string>
    <string name="title_new_product">New Product</string>
    <string name="title_product_management">Product Management</string>
    <string name="title_sort_by_id">Sort by ID</string>
    <string name="title_sort_by_name">Sort by Name</string>
    <string name="title_sort_by_price">Sort by Price</string>
    <string name="title_sort_by_quantity">Sort by Quantity</string>
    <string name="title_filter_by_category">Filter by Category</string>
    <string name="title_update_name">Update Name</string>
    <string name="title_update_quantity">Update Quantity</string>
    <string name="title_update_price">Update Price</string>
    <string name="title_update_description">Update Description</string>
    <string name="title_change_image">Change Image</string>
    <string name="title_product_detail">Product Detail</string>
    <string name="title_product_id">Product ID</string>
    <string name="title_product_name">Product Name</string>
    <string name="title_product_quantity">Quantity</string>
    <string name="title_product_price">Price</string>
    <string name="title_product_category">Category ID</string>
    <string name="title_product_description">Description</string>
    <string name="title_product_image">Image ID</string>
    <string name="title_edit_product">Edit Stock</string>
</resources>